fixed footer content spacing

--- a/event-planner/src/App.css
+++ b/event-planner/src/App.css
@@ -76,6 +76,7 @@ li a:hover{
 
 .copyright {
   padding-top: 0.4%;
+  margin-right: 4%;
 }
 
 .social-div {
@@ -186,5 +187,5 @@ li a:hover{
 }
 
 .follow-us{
-  margin-left: 10%;
+  margin-left: 3%;
 }
